objects/Branch__c.object
<CustomObject>
    <description>Branch or Business Unit for the Product configuration</description>
    <fields>
        <fullName>AM_PM__c</fullName>
        <description>Field to capture if the Plant Cut Off Time is AM or PM</description>
        <label>AM / PM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>Field to capture Address Line 1 of the Plant&apos;s physical address.</description>
        <label>Address 1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Field to capture Address Line 2 of the Plant&apos;s physical address.</description>
        <label>Address 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Plant_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Area Plant Manager for the Plant</description>
        <label>Area Plant Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_Regional_Customer_Ops_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area/Regional Customer Ops Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plant_Area_Customer_Ops_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_ID__c</fullName>
        <description>Business Unit ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Business Unit ID</inlineHelpText>
        <label>Business Unit ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Sum__c</fullName>
        <description>For use with JDE Integration only.</description>
        <label>CheckSum</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Field to capture the City of the Plant&apos;s physical address.</description>
        <label>City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Field to capture the County in which the physical Plant resides.</description>
        <label>County</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Plant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to capture whether or not the plant is considered a Customer Care Plant.</description>
        <label>Customer Care Plant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Op_Hub_hours__c</fullName>
        <description>Field to capture the hours of operation for the Customer Ops team in the hub to which this plant belongs.</description>
        <label>Customer Op Hub hours</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Op_Team_email__c</fullName>
        <description>Field to capture the Email Address of the Customer Ops Team assigned to this Plant.</description>
        <label>Customer Op Team email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Customer Operations Manager assigned to this Plant.</description>
        <label>Customer Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Ops_Plant_Type__c</fullName>
        <description>Field to capture the Type of Plant for Customer Ops</description>
        <inlineHelpText>This is used for logic and filtering
&quot;Both&quot; means it is a manufacturing and shipping plant</inlineHelpText>
        <label>Customer Ops Plant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Co-Man</fullName>
                </value>
                <value>
                    <fullName>3PL</fullName>
                </value>
                <value>
                    <fullName>Out of Scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Ops_Region__c</fullName>
        <description>The Customer Operations regions to which plants are assigned.</description>
        <label>Customer Ops Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Co-Man</fullName>
                </value>
                <value>
                    <fullName>Great East</fullName>
                </value>
                <value>
                    <fullName>Great West</fullName>
                </value>
                <value>
                    <fullName>Out of Scope</fullName>
                </value>
                <value>
                    <fullName>South Central</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Upper Midwest</fullName>
                </value>
                <value>
                    <fullName>West Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cut_off_Bag_Pickup__c</fullName>
        <description>Field to capture the Cut-off Bag Pickup time for this Plant.</description>
        <label>Cut-off Bag Pickup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut_off_Bag__c</fullName>
        <description>Field to capture the Cut-off Bag Delivery time for this Plant.</description>
        <label>Cut-off Bag Delivery</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut_off_Bulk_Pickup__c</fullName>
        <description>Field to capture the Cut-off Bulk Pickup time for this Plant.</description>
        <label>Cut-off Bulk Pickup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut_off_Bulk__c</fullName>
        <description>Field to capture the Cut-off Bulk Delivery time for this Plant.</description>
        <label>Cut-off Bulk Delivery</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut_off_Liquid_Delivery__c</fullName>
        <description>Field to capture the Cut-off Liquid Delivery time for this Plant.</description>
        <label>Cut-off Liquid Delivery</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut_off_Liquid_Pickup__c</fullName>
        <description>Field to capture the Cut-off Liquid Pickup time for this Plant.</description>
        <label>Cut-off Liquid Pickup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Light_Savings_Time_Flag__c</fullName>
        <description>Field to capture whether the Plant is using Day Light Savings Time</description>
        <label>Day Light Savings Time Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Over_Standard_Lead__c</fullName>
        <description>Field to capture the number of days over standard lead for the Plant</description>
        <label>Days Over Standard Lead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Field to capture a Description of this Plant.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dock_Door_Info__c</fullName>
        <description>Field to capture Dock Door Info for this Plant.</description>
        <label>Dock Door Info</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finished_Goods_Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Finished Goods Planner for this Plant.</description>
        <label>Finished Goods Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Truck_Load__c</fullName>
        <description>Field to capture the full truck load for the Plant</description>
        <label>Full Truck Load</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Location_ID__c</fullName>
        <description>Field to capture the GL Location ID for this Plant.</description>
        <label>GL Location ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Location_Key__c</fullName>
        <description>Field to capture the GL Location Key for this Plant.</description>
        <label>GL Location Key</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Plant_ID__c</fullName>
        <description>Field to capture the GL Plant ID for this Plant.</description>
        <label>GL Plant ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_for_Pickup__c</fullName>
        <description>Field to capture the designated Hours for Pickup for this Plant.</description>
        <label>Hours for Pickup</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loading_Weight_per_1_2_Hour__c</fullName>
        <description>Field to capture the loading weight per 1/2 hour at the Plant</description>
        <label>Loading Weight per 1/2 Hour</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manufacturing Director at the Manufacturing Plant</description>
        <label>Manufacturing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Region__c</fullName>
        <description>Field to capture the Manufacturing Region for this Plant.</description>
        <label>Manufacturing Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Focus Region</fullName>
                </value>
                <value>
                    <fullName>Extrusion 2</fullName>
                </value>
                <value>
                    <fullName>Extrusion Region</fullName>
                </value>
                <value>
                    <fullName>Flaking</fullName>
                </value>
                <value>
                    <fullName>General Region</fullName>
                </value>
                <value>
                    <fullName>Liquid Block Region</fullName>
                </value>
                <value>
                    <fullName>Misc Region</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Packaging Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Place_Region__c</fullName>
        <description>Field to capture the Market Place Region for this Plant.</description>
        <label>Market Place Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corp-Direct Ship</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Eastern Region</fullName>
                </value>
                <value>
                    <fullName>General Market Region</fullName>
                </value>
                <value>
                    <fullName>INTL</fullName>
                </value>
                <value>
                    <fullName>NE-Direct Ship</fullName>
                </value>
                <value>
                    <fullName>Northeast Region</fullName>
                </value>
                <value>
                    <fullName>Pacific Northwest Region</fullName>
                </value>
                <value>
                    <fullName>PNW-Direct Ship</fullName>
                </value>
                <value>
                    <fullName>Richmond</fullName>
                </value>
                <value>
                    <fullName>SE-Direct Ship</fullName>
                </value>
                <value>
                    <fullName>Southern Region</fullName>
                </value>
                <value>
                    <fullName>Southwest Region</fullName>
                </value>
                <value>
                    <fullName>Southwest Region CBD</fullName>
                </value>
                <value>
                    <fullName>Subsidiaries</fullName>
                </value>
                <value>
                    <fullName>SW-Direct Ship</fullName>
                </value>
                <value>
                    <fullName>UMW-Direct Ship</fullName>
                </value>
                <value>
                    <fullName>UMW-Other</fullName>
                </value>
                <value>
                    <fullName>UMW/West Region</fullName>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Minimum__c</fullName>
        <description>Field to capture the minimum order for the Plant</description>
        <label>Order Minimum</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personnel_Notes__c</fullName>
        <description>Notes specific to personnel especially needed if edits made to user fields for approval processes.</description>
        <inlineHelpText>Enter notes if named fields do not apply or users had to be edited for approval process reasons or not active salesforce users.</inlineHelpText>
        <label>Personnel Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plant_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Plant Administrator of this Plant.</description>
        <label>Plant Admin</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Plants (Plant Administrator)</relationshipLabel>
        <relationshipName>Plants2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_Cutoff_Time__c</fullName>
        <description>Field to capture the cutoff time for the Plant</description>
        <label>Plant Cutoff Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Holidays__c</fullName>
        <description>Field to capture the holidays the Plant observes</description>
        <label>Plant Holidays</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plant_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Plant Manager of this Plant.</description>
        <label>Plant Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plants7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <description>Full Plant Name (i.e. Harrisburg Plant)</description>
        <externalId>true</externalId>
        <label>Plant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Operation_Hours__c</fullName>
        <description>Field to capture the Operation Hours for this Plant.</description>
        <label>Plant Operation Hours</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Phone_Number__c</fullName>
        <description>Field to capture the Phone Number for this Plant.</description>
        <label>Plant Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plant_Quality_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Quality Manager for this Plant.</description>
        <label>Plant Quality Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plants6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_Region__c</fullName>
        <description>Field to capture the Plant Region in which this Plant resides.</description>
        <label>Plant Region</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Supervisor for this Plant.</description>
        <label>Plant Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plants5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_Type__c</fullName>
        <description>Field to capture the Plant Type for Integration</description>
        <label>Plant Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Quality Supervisor for this Plant.</description>
        <label>Quality Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plants4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sr_Transportation_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Senior Transportation Manager for the Plant.</description>
        <label>Sr. Transportation Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Plants (Sr. Transportation Manager)</relationshipLabel>
        <relationshipName>Plants4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Field to capture the State of the Plant&apos;s physical address.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <description>Field to capture the Subregion in which this Plant resides.</description>
        <label>Subregion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>Field to capture the Tier of the Plant.</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>CM1</fullName>
                </value>
                <value>
                    <fullName>DB</fullName>
                </value>
                <value>
                    <fullName>JY</fullName>
                </value>
                <value>
                    <fullName>KH</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>TL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Field to capture the time zone for the Plant</description>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alaskan</fullName>
                </value>
                <value>
                    <fullName>Atlantic</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Hawaiian</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transportation_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Transportation Director for this Plant</description>
        <label>Transportation Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Plants (Transportation Director)</relationshipLabel>
        <relationshipName>Plants3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transportation_Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Transportation Planner for this Plant.</description>
        <label>Transportation Planner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Plants (Transportation Planner)</relationshipLabel>
        <relationshipName>Plants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Warehouse Manager for this Plant.</description>
        <label>Warehouse Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plants2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Warehouse Supervisor for this Plant.</description>
        <label>Warehouse Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plants3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Field to capture Zip Code of the Plant&apos;s physical address.</description>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Plant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plant_Name__c</columns>
        <columns>Customer_Ops_Region__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Customer_Care_Plant__c</columns>
        <columns>Area_Regional_Customer_Ops_Manager__c</columns>
        <columns>Area_Plant_Manager__c</columns>
        <columns>Quality_Supervisor__c</columns>
        <columns>Plant_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Co_Man_Branch</fullName>
        <columns>NAME</columns>
        <columns>Plant_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Customer_Care_Plant__c</columns>
        <columns>Area_Regional_Customer_Ops_Manager__c</columns>
        <columns>Area_Plant_Manager__c</columns>
        <columns>Quality_Supervisor__c</columns>
        <columns>Plant_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Ops_Plant_Type__c</field>
            <operation>equals</operation>
            <value>Co-Man</value>
        </filters>
        <label>Co-Man</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Customer_Ops_Director</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Care</fullName>
        <columns>NAME</columns>
        <columns>Plant_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Customer_Care_Plant__c</columns>
        <columns>Area_Regional_Customer_Ops_Manager__c</columns>
        <columns>Area_Plant_Manager__c</columns>
        <columns>Quality_Supervisor__c</columns>
        <columns>Plant_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Care_Plant__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Customer Care</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Customer_Ops_Director</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Community_Branch</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Community</label>
        <queue>Customer_Community</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Great_East_Region_Branch</fullName>
        <columns>NAME</columns>
        <columns>Plant_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Customer_Care_Plant__c</columns>
        <columns>Area_Regional_Customer_Ops_Manager__c</columns>
        <columns>Area_Plant_Manager__c</columns>
        <columns>Quality_Supervisor__c</columns>
        <columns>Plant_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Ops_Region__c</field>
            <operation>equals</operation>
            <value>Great East</value>
        </filters>
        <label>Great East Region</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Customer_Ops_Director</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Great_West_Region_Branch</fullName>
        <columns>NAME</columns>
        <columns>Plant_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Customer_Care_Plant__c</columns>
        <columns>Area_Regional_Customer_Ops_Manager__c</columns>
        <columns>Area_Plant_Manager__c</columns>
        <columns>Quality_Supervisor__c</columns>
        <columns>Plant_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Ops_Region__c</field>
            <operation>equals</operation>
            <value>Great West</value>
        </filters>
        <label>Great West Region</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Customer_Ops_Director</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Out_of_Scope_Branch</fullName>
        <columns>NAME</columns>
        <columns>Plant_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Customer_Care_Plant__c</columns>
        <columns>Area_Regional_Customer_Ops_Manager__c</columns>
        <columns>Area_Plant_Manager__c</columns>
        <columns>Quality_Supervisor__c</columns>
        <columns>Plant_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Ops_Plant_Type__c</field>
            <operation>equals</operation>
            <value>Out of Scope</value>
        </filters>
        <label>Out of Scope</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Customer_Ops_Director</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>South_Central_Region_Branch</fullName>
        <columns>NAME</columns>
        <columns>Plant_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Customer_Care_Plant__c</columns>
        <columns>Area_Regional_Customer_Ops_Manager__c</columns>
        <columns>Area_Plant_Manager__c</columns>
        <columns>Quality_Supervisor__c</columns>
        <columns>Plant_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Ops_Region__c</field>
            <operation>equals</operation>
            <value>South Central</value>
        </filters>
        <label>South Central Region</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Customer_Ops_Director</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Southeast_Region_Branch</fullName>
        <columns>NAME</columns>
        <columns>Plant_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Customer_Care_Plant__c</columns>
        <columns>Area_Regional_Customer_Ops_Manager__c</columns>
        <columns>Area_Plant_Manager__c</columns>
        <columns>Quality_Supervisor__c</columns>
        <columns>Plant_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Ops_Region__c</field>
            <operation>equals</operation>
            <value>Southeast</value>
        </filters>
        <label>Southeast Region</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Customer_Ops_Director</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>